--- a/TaskCalendar/src/app/components/header/header.component.html
+++ b/TaskCalendar/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
   <h1>{{ title }}</h1>
   <app-button
-    color="green"
-    text="ADD"
+    color="{{ showAddTask ? 'red' : 'green' }}"
+    text="{{ showAddTask ? 'CLOSE' : 'ADD' }}"
     (btnOnClick)="toggleAddTask()"
   ></app-button>
 </header>
