--- a/TaskCalendar/src/app/components/header/header.component.html
+++ b/TaskCalendar/src/app/components/header/header.component.html
@@ -4,6 +4,6 @@
     color="{{ showAddTask ? 'red' : 'green' }}"
     text="{{ showAddTask ? 'CLOSE' : 'ADD' }}"
     (btnOnClick)="toggleAddTask()"
+    *ngIf="checkRoute('/')"
   ></app-button>
 </header>
-<app-tasks></app-tasks>
